terraform/modules/alb/listeners.tf
resource "aws_lb_listener" "alb_http_forward" {
  load_balancer_arn = aws_lb.app_alb.arn
  port = 80
  protocol = "HTTP"

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.app_tg.arn
    }
}
